--- a/MedicineWareHouseAndroid/app/src/main/res/layout/activity_main.xml
+++ b/MedicineWareHouseAndroid/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,20 @@
         android:id="@+id/mw_output"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Hello World!"
+        android:textAlignment="center"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
+        />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GO"/>
+        android:text="GO"
+        android:id="@+id/button"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true" />
 
 
 </RelativeLayout>
