--- a/MedicineWareHouseIOS/MedicineWarehouse/Class/Main/SignInViewController.xib
+++ b/MedicineWareHouseIOS/MedicineWarehouse/Class/Main/SignInViewController.xib
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SignInViewController">
             <connections>
                 <outlet property="password" destination="psR-7U-xsO" id="C4N-mw-9GI"/>
+                <outlet property="passwordconfirm" destination="63i-X3-eS4" id="0xY-5H-sRd"/>
                 <outlet property="tip" destination="29m-5v-4rh" id="S3C-J9-KTU"/>
                 <outlet property="username" destination="lHA-po-btP" id="4Tl-UY-l8X"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -30,6 +31,12 @@
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="psR-7U-xsO" userLabel="password">
                     <rect key="frame" x="30" y="368.5" width="315" height="30"/>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="63i-X3-eS4" userLabel="passwordconfirm">
+                    <rect key="frame" x="30" y="448.5" width="315" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
@@ -53,7 +60,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yw0-FX-Vbk">
-                    <rect key="frame" x="137.5" y="426.5" width="100" height="30"/>
+                    <rect key="frame" x="137.5" y="528.5" width="100" height="30"/>
                     <color key="backgroundColor" red="0.047431041068613296" green="0.6125121437823835" blue="0.20673229065444984" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="eo6-oK-uhB"/>
@@ -66,9 +73,18 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请注册" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="29m-5v-4rh">
-                    <rect key="frame" x="164.5" y="403.5" width="46" height="18"/>
+                    <rect key="frame" x="164.5" y="500.5" width="46" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <color key="textColor" red="1" green="0.20039104269999999" blue="0.10521085299999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="确认密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f2D-Mh-Sxl">
+                    <rect key="frame" x="30" y="417.5" width="100" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="aTb-z1-2uY"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
@@ -77,17 +93,22 @@
                 <constraint firstItem="5HJ-tw-pZt" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="1xp-oX-bTf"/>
                 <constraint firstItem="lHA-po-btP" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-30" id="5qW-gW-VwM"/>
                 <constraint firstItem="29m-5v-4rh" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="9jr-Mb-WDI"/>
+                <constraint firstItem="f2D-Mh-Sxl" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="EGQ-3W-g1C"/>
+                <constraint firstItem="63i-X3-eS4" firstAttribute="top" secondItem="f2D-Mh-Sxl" secondAttribute="bottom" constant="10" id="EOG-12-T5T"/>
                 <constraint firstItem="bxp-fm-r4w" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="JRk-rv-pxU"/>
-                <constraint firstItem="29m-5v-4rh" firstAttribute="top" secondItem="psR-7U-xsO" secondAttribute="bottom" constant="5" id="R5Q-O3-gUx"/>
                 <constraint firstItem="psR-7U-xsO" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="ROW-Ab-QSD"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="psR-7U-xsO" secondAttribute="trailing" constant="30" id="RTU-cE-0vX"/>
-                <constraint firstItem="yw0-FX-Vbk" firstAttribute="top" secondItem="29m-5v-4rh" secondAttribute="bottom" constant="5" id="SxU-86-i3B"/>
                 <constraint firstItem="psR-7U-xsO" firstAttribute="top" secondItem="bxp-fm-r4w" secondAttribute="bottom" constant="10" id="cBT-JU-xoV"/>
                 <constraint firstItem="psR-7U-xsO" firstAttribute="top" secondItem="lHA-po-btP" secondAttribute="bottom" constant="50" id="cmA-He-Ivm"/>
+                <constraint firstItem="yw0-FX-Vbk" firstAttribute="top" secondItem="29m-5v-4rh" secondAttribute="bottom" constant="10" id="e6j-ZS-bM8"/>
                 <constraint firstItem="lHA-po-btP" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="ebu-Ah-xfE"/>
+                <constraint firstItem="yw0-FX-Vbk" firstAttribute="top" secondItem="63i-X3-eS4" secondAttribute="bottom" constant="50" id="gId-qo-HZs"/>
                 <constraint firstItem="yw0-FX-Vbk" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="moX-hr-VhI"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="63i-X3-eS4" secondAttribute="trailing" constant="30" id="pqr-Gh-vG9"/>
                 <constraint firstItem="lHA-po-btP" firstAttribute="top" secondItem="5HJ-tw-pZt" secondAttribute="bottom" constant="10" id="rDz-ay-s2G"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="lHA-po-btP" secondAttribute="trailing" constant="30" id="tq2-U9-fEd"/>
+                <constraint firstItem="63i-X3-eS4" firstAttribute="top" secondItem="psR-7U-xsO" secondAttribute="bottom" constant="50" id="u2n-aj-Gh7"/>
+                <constraint firstItem="63i-X3-eS4" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="vaS-6j-HrS"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
         </view>
